fix: cart recommendations not showing

--- a/themes/bella/styles/core.cart-form.scss
+++ b/themes/bella/styles/core.cart-form.scss
@@ -97,6 +97,10 @@
       gap: var(--spacing-48);
     }
 
+    &:has(ui-empty:not([hidden]) + .collections) {
+      justify-content: flex-start;
+    }
+
     &:has(ui-empty[hidden]) {
       .collections {
         display: none;
