--- a/themes/bella/styles/misc.empty.scss
+++ b/themes/bella/styles/misc.empty.scss
@@ -8,12 +8,13 @@
     gap: var(--spacing-16);
 
     .heading {
-      font: var(--font-headline-lg);
+      font: var(--font-headline-sm);
     }
 
     .subheading {
+      opacity: 0.72;
       color: var(--color-on-surface-variant);
-      font: var(--font-body-lg);
+      font: var(--font-body-md);
     }
 
     [ui-slot="button"] {
